anna (0.039) UNRELEASED; urgency=low

  * Christian Perrier
    - Update French translation.
  * Kęstutis Biliūnas
    - Add Lithuanian (lt.po) translation.
  * Matt Kraai
    - Use the error template type for errors.

 -- Denis Barbier <barbier@debian.org>  Tue, 14 Oct 2003 22:11:29 +0200

anna (0.038) unstable; urgency=low

  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Alastair McKinstry
    - Ensure libdebconfclient-dev > 0.46, for working debconf_() macros.

 -- Sebastian Ley <ley@debian.org>  Tue, 14 Oct 2003 11:46:43 +0200

anna (0.037) unstable; urgency=low

  * Alastair McKinstry
    - Port to new cdebconf helper macros.
    - Move to Standards-Version: 3.6.1.0; no changes required.
  * Jure Cuhalev
    - Updated Slovenian translation (sl.po).
  * Javier Fernandez-Sanguino
    - Updated Spanish translation (es.po).
  * Sebastian Ley
    - Fix the code that checks whether anna installed new retrievers. Thanks
      Goswin Brederlow for the hint.
  * Petter Reinholdtsen
    - Update ru.po, thanks to patch from Ilgiz Kalmetev (Closes: #214378)

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 12 Oct 2003 19:30:25 +0200

anna (0.036) unstable; urgency=low

  * Sebastian Ley
    - If anna loads a new retriever, exit with statuscode 10 to leave it
      unconfigured, and hence be started again. This is needed for the floppy
      install where anna has to run twice.
  * Bastian Blank
    - Port to new libdebian-installer api version 4.
    - Add support for subarchitectures.
  * Bart Cornelis
    - incorporated comments from debian-l10n-dutch review process in dutch
      translation
  * Alastair McKinstry
    - Convert Changelog to UTF-8 as per policy.
  * Petter Reinholdtsen
    - Make menu entry translatable.
  * Pierre Machard
    - Update French po-debconf translation.
  * Kenshi Muto
    - Update Japanese po (ja.po)
  * Denis Barbier
    - Add comments in templates file, which are copied into PO files,