@@ -6,6 +6,7 @@ anna (0.039) UNRELEASED; urgency=low
     - Add Lithuanian (lt.po) translation.
   * Matt Kraai
     - Use the error template type for errors.
+    - Handle kernel module packages that end in -di (Closes: #216433).
 
  -- Denis Barbier <barbier@debian.org>  Tue, 14 Oct 2003 22:11:29 +0200
 
